--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 					<div class="Container1">
 						<h2>Simon Gravelle</h2>
 						<p>Postdoctoral researcher</p>
-						<p>Universidad Adolfo Ibáñez<br>Viña del Mar, Chile</p>
+						<p>University Queen Mary<br>London, UK</p>
 						<p>simon.gravelle at live.fr</p>
+						<p>s.gravelle at qmul.ac.uk</p>
 						<div class="hr2"></div>
 						<p class="Large"><b>Interests</b></p>
 						<p>Nanofluidics</p>
