--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 					<img src="./Images/simon_fac.jpg" style="width:100%" alt="Picture">
 					<div class="Container1">
 						<h2>Simon Gravelle</h2>
-						<p>Postdoctoral researcher</p>
+						<p>Postdoctoral researcher<br>
 						<p>University Queen Mary<br>London, UK</p>
 						<p>simon.gravelle at live.fr</p>
 						<p>s.gravelle at qmul.ac.uk</p>
