--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
 					<img src="./Images/simon_fac.jpg" style="width:100%" alt="Picture">
 					<div class="Container1">
 						<h2>Simon Gravelle</h2>
-						<p>Postdoctoral researcher<br>
-						<p>University Queen Mary<br>London, UK</p>
+						<p>
+							Postdoctoral researcher <br>
+							University Queen Mary <br>
+							London, UK
+						</p>
 						<p>simon.gravelle at live.fr</p>
 						<p>s.gravelle at qmul.ac.uk</p>
 						<div class="hr2"></div>
