--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
 							University Queen Mary <br>
 							London, UK
 						</p>
-						<p>simon.gravelle at live.fr</p>
-						<p>s.gravelle at qmul.ac.uk</p>
+						<p>
+							simon.gravelle at live.fr <br>
+							s.gravelle at qmul.ac.uk
+						</p>
 						<div class="hr2"></div>
 						<p class="Large"><b>Interests</b></p>
 						<p>Nanofluidics</p>
