--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
 						</p>
 						<div class="hr2"></div>
 						<p class="Large"><b>Interests</b></p>
-						<p>Nanofluidics</p>
-						<p>Thermodynamics</p>
-						<p>Biomimetism</p>
+						<p>
+							Biomimetism <br>
+							Interaction fluid-solid <br>
+							Flow through porous media <br>
+						</p>
 						<div class="hr2"></div>
 						<p class="Large"><b>Activities</b></p>
 						<p>Molecular dynamics</p>
