--- a/index.html
+++ b/index.html
@@ -30,15 +30,28 @@
 						<div class="hr2"></div>
 						<p class="Large"><b>Interests</b></p>
 						<p>
-							Biomimetism <br>
+							Biomimetics <br>
+							Nanofluidics <br>
+							Thermodynamics <br>
+							Cytoskeleton dynamics <br>
 							Interaction fluid-solid <br>
 							Flow through porous media <br>
 						</p>
 						<div class="hr2"></div>
-						<p class="Large"><b>Activities</b></p>
-						<p>Molecular dynamics</p>
-						<p>Finite elements</p>
-						<p>Cpp, Python, Matlab, LaTeX</p>
+						<p class="Large"><b>Expertise</b></p>
+						<p>
+						Grand canonical Monte Carlo <br>
+						Finite elements method <br>
+						Umbrella sampling <br>
+						Molecular dynamics <br>
+						Finite elements method
+						</p>
+						<p>
+						Cpp <br> 
+						Python <br> 
+						Matlab/Octave <br> 
+						LaTeX <br> 
+						</p>
 						<div class="hr2"></div>
 						<p class="Large"><b>PDF resume</b></p>
 						<a TARGET="_BLANK" href="SimonGravelle_resume.pdf"> <img src="Images/PDFsymbol.jpg" WIDTH="40px"></a>
