--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							Nanofluidics <br>
 							Thermodynamics <br>
 							Cytoskeleton dynamics <br>
-							Interaction fluid-solid <br>
+							Fluid-solid interaction <br>
 							Flow through porous media <br>
 						</p>
 						<div class="hr2"></div>
@@ -46,14 +46,18 @@
 						Molecular dynamics <br>
 						Finite elements method
 						</p>
-						<p>
-						Cpp <br> 
-						Python <br> 
-						Matlab/Octave <br> 
-						LaTeX <br> 
-						</p>
 						<div class="hr2"></div>
-						<p class="Large"><b>PDF resume</b></p>
+						<p class="Large"><b>Carrer</b></p>
+						<p>
+							since 2019 - post-doc at the Queen Mary University of London, UK <br>
+							2016-2019 - post-doc at the Universidad Adolfo Ibáñez in Viña del Mar, Chile <br>
+							2012-2015 - phd thesis at the Université Claude Bernard, Lyon, France <br>
+
+						</p>
+						
+						
+						<div class="hr2"></div>
+						<p class="Large"><b>My resume in PDF</b></p>
 						<a TARGET="_BLANK" href="SimonGravelle_resume.pdf"> <img src="Images/PDFsymbol.jpg" WIDTH="40px"></a>
 						<br>
 						last updated 07/2018
