--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
 						</p>
 						
 						<div class="hr2"></div>
-						<p class="Large"><b>Carrer</b></p>
+						<p class="Large"><b>Career</b></p>
 						<p>
-							since 2019 - post-doc 2 <br>
-							Queen Mary University of London, UK <br> <br>
-							2016-2019 - post-doc 1 <br>
-							Universidad Adolfo Ibáñez, Viña, Chile <br> <br>
-							2012-2015 - phd thesis <br>
-							Université Claude Bernard, Lyon, France
+							since 2019 - Postdoc n°2 <br>
+							Queen Mary U., London, UK <br> <br>
+							2016-2019 - Postdoc n°1 <br>
+							U. Adolfo Ibáñez, Viña, Chile <br> <br>
+							2012-2015 - PhD thesis <br>
+							U. Claude Bernard, Lyon, France
 						</p>
 						
 						<div class="hr2"></div>
