--- a/index.html
+++ b/index.html
@@ -61,7 +61,12 @@
 						</p>
 						
 						<div class="hr2"></div>
-						<p class="Large"><b>My resume in PDF</b></p>
+						<p class="Large"><b>Resume</b></p>
+						<p>
+							8 articles (including PNAS and PRL) <br>
+							more than 250 citations <br>
+							h-factor=6<br>
+						</p>
 						<a TARGET="_BLANK" href="SimonGravelle_resume.pdf"> <img src="Images/PDFsymbol.jpg" WIDTH="40px"></a>
 						<br>
 						last updated 07/2018
