--- a/index.html
+++ b/index.html
@@ -78,8 +78,23 @@
 			<div class="Twothird">
 				<div class="Container1 Card BackWhite MarginBottom">
 		  			<br>
-<div class="clearfix">
-					<img class="img2" src="./Images/water_reaxFF.jpg" alt="Reaxff" width="200">
+					<div class="clearfix">
+						<img class="img2" src="./Images/water_reaxFF.jpg" alt="Reaxff" width="200">
+						<h2><a href="tuto1_water_reaxff.html">Tutorial: molecular dynamics -- absolute beginer</a></h2>
+						
+						<p align="justify">
+							This step-by-step tutorial is written to help a beginner to perform his very first 
+							molecular dynamics simulation. The simulated system is a cube filled with bulk liquid water, 
+							from which basic quantity such as density, diffusion coefficient or viscosity are measured.
+						</p>
+					
+						<p align="justify">
+							key words - molecular dynamics, <a href="https://lammps.sandia.gov/" TARGET="_BLANK">LAMMPS</a>, TIP4P/2005
+						</p>
+					</div>
+					<--
+					<div class="clearfix">
+						<img class="img2" src="./Images/water_reaxFF.jpg" alt="Reaxff" width="200">
 						<h2><a href="tuto1_water_reaxff.html">Tutorial: simulating bulk water using reactive force field</a></h2>
 						<p align="justify">This molecular dynamics tutorial decribes one of my personnal <a href="https://lammps.sandia.gov/" TARGET="_BLANK">LAMMPS</a> input files for simulating bulk water using reactive force field.</p>
 					</div>
@@ -110,7 +125,7 @@
 						<h2>How does capillarity look like below the continuum limit?</h2>
 						<p align="justify"> We studied the capillary filling of sub-nano-metric carbon nanotubes (CNTs), and found strong deviations from the classical law of capillarity. These deviations are a consequence of the structuring of the fluid within the channel, that manifest itself in a way similar to a disjoining pressure. Strikingly, for some "magic" values of tube diameter, the tube switches from being effectivelly hydrophilic to being effectivelly, see <a href="http://journals.aps.org/pre/abstract/10.1103/PhysRevE.93.033123" TARGET="_BLANK" style="text-decoration:none;">PRE2016</a>. <!--See also details here <a href="CapilaryFillingCNT.html" TARGET="_BLANK" style="text-decoration:none;"> Capillary filling inside subnanometric carbon nanotube (CNT)</a>.-->
 					</div>
-
+					!-->
 
 
 
