--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 						</p>
 					
 						<p align="justify">
-							key words - molecular dynamics, <a href="https://lammps.sandia.gov/" TARGET="_BLANK">LAMMPS</a>, TIP4P/2005
+							key words - molecular dynamics, LAMMPS, TIP4P/2005
 						</p>
 					</div>
 					
