--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 					<div class="clearfix">
 						<img class="img2" src="./Images/WaterCNT.jpg" alt="Aquaporin" width="200">
 						<h2>How does capillarity look like below the continuum limit?</h2>
-						<p align="justify"> We studied the capillary filling of sub-nano-metric carbon nanotubes (CNTs), and found strong deviations from the classical law of capillarity. These deviations are a consequence of the structuring of the fluid within the channel, that manifest itself in a way similar to a disjoining pressure. Strikingly, for some "magic" values of tube diameter, the tube switches from being effectivelly hydrophilic to being effectivelly, see <a href="http://journals.aps.org/pre/abstract/10.1103/PhysRevE.93.033123" TARGET="_BLANK" style="text-decoration:none;">PRE2016</a>. <!--See also details here <a href="CapilaryFillingCNT.html" TARGET="_BLANK" style="text-decoration:none;"> Capillary filling inside subnanometric carbon nanotube (CNT)</a>.-->
+						<p align="justify"> We studied the capillary filling of sub-nano-metric carbon nanotubes (CNTs), and found strong deviations from the classical law of capillarity. These deviations are a consequence of the structuring of the fluid within the channel, that manifest itself in a way similar to a disjoining pressure. Strikingly, for some "magic" values of tube diameter, the tube switches from being effectivelly hydrophilic to being effectivelly, see <a href="http://journals.aps.org/pre/abstract/10.1103/PhysRevE.93.033123" TARGET="_BLANK" style="text-decoration:none;">PRE2016</a>. <!--See also details here <a href="CapilaryFillingCNT.html" TARGET="_BLANK" style="text-decoration:none;"> Capillary filling inside subnanometric carbon nanotube (CNT)</a>.
 					</div>
 					-->
 
