--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
 							key words - molecular dynamics, LAMMPS, TIP4P/2005
 						</p>
 					</div>
+					
+					<div class="hr1"></div>					
+					
 					<div class="clearfix">
 						<img class="img2" src="./Images/water_reaxFF.jpg" alt="Reaxff" width="200">
 						<h2>
