--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 						<img class="img2" src="./Images/water_reaxFF.jpg" alt="Reaxff" width="200">
 						<h2>
 							<a href="tuto1_water_reaxff.html">
-								Tutorial -- molecular dynamics -- absolute beginer
+								Tutorial &mdash; molecular dynamics -- absolute beginer
 							</a>
 						</h2>
 						
