--- a/tutorial1MD.html
+++ b/tutorial1MD.html
@@ -1,1 +1,42 @@
+<!DOCTYPE html>
+<html>
+<title>Simon Gravelle webpage</title>
+<meta charset="UTF-8">
+<link rel="stylesheet" href="./wcss.css">
+<style>
+	html,body,h1,h3,h4,h5,h6 {font-family: Times New Roman, sans-serif;}
+</style>
+<body class="BackgroundColor">
+	<div class="Content TopMargin" style="max-width:1400px;">
+		<div class="RowPadding">
+			<div class="FULL">
+				<div class="Container1 Card BackWhite MarginBottom">
+		  			<br>
+					<div class="clearfix">
+						<h2><a href="./index.html">Back to the main page</a></h2>
+					</div>
+				<br>
+				</div>
+				<div class="Container1 Card BackWhite MarginBottom">
+		  			<br>
+					<div class="clearfix">
+						<img class="img2" src="./Images/water_reaxFF.jpg" alt="Image" width="200">
+						<h2>Tutorial &mdash; molecular dynamics &mdash; absolute beginer</h2>
+						<p align="justify"></p>
+					</div>
+					<div class="hr1"></div>
+					<div class="clearfix">
+						<h2>Step 1: npt equilibrium</h2>
+						<p align="justify">
+						Let us define the units as real instead of the default lj.
+						<div class="lammps">units real</div>
+						We want to simulate a periodic box. 
+						<div class="lammps">boundary p p p</div>
+					</div>
+			</div>
+		</div>
+	</div>
+</body>
+</html>
+
 
