--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
 		  			<br>
 					<div class="clearfix">
 						<img class="img2" src="./Images/water_reaxFF.jpg" alt="Reaxff" width="200">
-						<h2>
+						<p class="Large"><b>
 							<a href="tutorial1MD.html">
 								Tutorial &mdash; molecular dynamics &mdash; absolute beginer
 							</a>
-						</h2>
+						</b></p>
 						
 						<p align="justify">
 							This step-by-step tutorial is written to help a beginner to perform his very first 
