--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 				<div class="Twothird">
 					<div class="Container1 BackWhite MarginBottom">
 						<div class="clearfix Container5">
-							<img class="img2" src="./Images/water_reaxFF.jpg" alt="Reaxff" width="180">
+							<img class="img2" src="./Images/water_reaxFF.jpg" alt="box with water" width="180">
 							<p class="Large"><b>
-								<a href="tutorial1MD.html">
+								<a TARGET="_BLANK" href="tutorial1MD.html">
 									Step-by-step tutorial &mdash; molecular dynamics for absolute beginer
 								</a>
 							</b></p>
@@ -81,6 +81,15 @@
 							</p>
 							<br>
 							<p>Comming soon</p>
+						</div>
+
+						<div class="clearfix Container6">
+							<img class="img2" src="./Images/xmgrace_curve.png" alt="curve made with xmgrace" width="180">
+							<p class="Large"><b>
+								<a TARGET="_BLANK" href="xmgracetipstricks.html">
+									Tips and trick &mdash; plotting data with xmgrace
+								</a>
+							</b></p>
 						</div>
 					
 						<!--
