--- a/xmgracetipstricks.html
+++ b/xmgracetipstricks.html
@@ -1,91 +1,14 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-	<head>
-		<title>Xmgrace Tips and Tricks</title>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
-		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-		<script src="js/jquery.min.js"></script>
-		<script src="js/jquery.poptrox.min.js"></script>
-		<script src="js/jquery.scrolly.min.js"></script>
-		<script src="js/jquery.scrollgress.min.js"></script>
-		<script src="js/skel.min.js"></script>
-		<script src="js/init.js"></script>
-		<noscript>
-			<link rel="stylesheet" href="css/skel.css" />
-			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-wide.css" />
-			<link rel="stylesheet" href="css/style-normal.css" />
-		</noscript>
-		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
-		<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-36911186-2', 'auto');
-  ga('send', 'pageview');
-
-
-</script>
-
-
-
-<script type="text/x-mathjax-config">
-  MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
-</script>
-<script type="text/javascript" async
-  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_CHTML">
-</script>
-
-	</head>
+	<title>Xmgrace Tips and Tricks</title>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="./wcss.css">
 	<body>
-
-		<!-- Header -->
-			<header id="header">
-
-				<!-- Logo -->
-					<h1 id="logo"><a href=index.html>Simon Gravelle's homepage</a></h1>
-
-				<!-- Nav -->
-					<nav id="nav">
-						<ul>
-							<li><a href=index.html>Main page</a></li>
-						</ul>
-					</nav>
-
-			</header>
-
-
-
-
-			<section id="work" class="main style3 primary">
-				<div class="content container">
-					<header>
-						<h2 align="center">Xmgrace Tips and Tricks <!-- <br>
-				from Lucas-Washburn law to the specific case of CNTs--></h2>
-
-					</header>
-
-
-
-
-
-		</table>
-
-
-
-			</td>
-
-				<table border="0"; >
-			<tr>
-
-			<td>
-
+		<div class="Content TopMargin" style="max-width:1400px;">
+			<table border="0"; >
+				<tr>
+				<td>
 				<h3>Shortcuts for symbols</h3>
-
 				<FONT COLOR="#003C8C"> <b>\cabc...ABC...\C</b></font> letters with accents, tildes, etc  à â ã ... À Â Ã ...
 				<br>
 				<FONT COLOR="#003C8C"> <b>\cE\C</b></font> Angström symbol, <span>&#8491;</span>
@@ -101,13 +24,8 @@
 				<FONT COLOR="#003C8C"> <b>\x\c9\C\f{}</b></font> not equal symbol <span>&#8800;</span>
 				<br>
 				<FONT COLOR="#003C8C"> <b>\x\c1\C\f{}</b></font> plus-minus sign <span>&#xB1;</span>
-
-
-
 				<br> <br>
-
 				<h3>Shortcuts for police</h3>
-
 				<FONT COLOR="#003C8C"> <b>\0</b></font>  Times-Roman
 				<br>
 				<FONT COLOR="#003C8C"> <b>\1</b></font>  Times-Italic
@@ -125,9 +43,7 @@
 				<FONT COLOR="#003C8C"> <b>\7</b></font>  Helvetica-BoldOblique
 				<br>
 				<FONT COLOR="#003C8C"> <b>\f{}</b></font> get back to original font
-
 				<br> <br>
-
 				<h3>Shortcuts for text manipulation</h3>
 				<FONT COLOR="#003C8C"> <b>\+</b></font>  increase size
 				<br>
@@ -158,27 +74,9 @@
 				<FONT COLOR="#003C8C"> <b>\r{x}</b></font>  rotate elements by x degrees anticlockwise
 				<br>
 				<FONT COLOR="#003C8C"> <b>\r{-x}</b></font>  cancel rotation
-				<br>
-
-			</td>
-
-			</tr>
-		</table>
-
-
-
-				</div>
-			</section>
-
-
-
-
-
-</script>
-
-
-
-
-
+				</td>
+				</tr>
+			</table>	
+		</div>
 	</body>
 </html>
