--- a/xmgracetipstricks.html
+++ b/xmgracetipstricks.html
@@ -71,6 +71,10 @@
 					</div>
 					<div class="Container1 BackWhite MarginBottom">
 						<div class="clearfix Container6">
+							<p class="Large"><b>Tips and tricks &mdash; plotting data with xmgrace</b></p>
+							<br>
+							<p><a TARGET="_BLANK" href="http://exciting-code.org/xmgrace-quickstart>">This page is a collection of shortcuts for xmgrace, a 2D plotting tool, open-source and simple to use.</a></p>
+							<br>
 							<h3>Shortcuts for symbols</h3>
 							<FONT COLOR="#003C8C"> <b>\cabc...ABC...\C</b></font> letters with accents, tildes, etc  à â ã ... À Â Ã ...
 							<br>
