--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 							<p class="Large2"><b>Resume (<a TARGET="_BLANK" href="SimonGravelle_resume.pdf">download pdf</a>)</b></p>
 							<p>
 								<a TARGET="_BLANK" href="https://scholar.google.com/citations?user=9fD2JlYAAAAJ&hl=en">
-								8 publi (including PNAS, PRL) <br>
+								8 publi. (including PNAS, PRL) <br>
 								more than 250 citations <br>
 								h-factor=6</a>
 							</p>
@@ -69,23 +69,21 @@
 							<img class="img2" src="./Images/water_reaxFF.jpg" alt="box with water" width="180">
 							<p class="Large"><b>
 								<a href="tutorial1MD.html">
-									Step-by-step tutorial &mdash; molecular dynamics for absolute beginer
+									Step-by-step tutorial &mdash; molecular dynamics for absolute beginners
 								</a>
 							</b></p>
 							
 							<p align="justify">
-								The system is a cube filled with water molecules (TIP4P/2005 model). Molecular dynamics simulations are performed with the code 								LAMMPS, atom visualisation is made with VMD, and data plotting with xmgrace.
+								The system is a cube filled with water molecules (TIP4P/2005 model). Molecular dynamics simulations are performed with the code 								LAMMPS, atom visualisation is made with VMD, and data plotting with Xmgrace.
 								The water is first equilibrated at ambient temperature and ambient pressure, then, basic quantities such as density, diffusion coefficient 									or viscosity are measured. 
 							</p>
-							<br>
-							<p>Comming soon</p>
 						</div>
 
 						<div class="clearfix Container6">
 							<img class="img2" src="./Images/xmgrace_curve.png" alt="curve made with xmgrace" width="180">
 							<p class="Large"><b>
 								<a href="xmgracetipstricks.html">
-									Tips and trick &mdash; plotting data with xmgrace
+									Tips and tricks &mdash; plotting data with Xmgrace
 								</a>
 							</b></p>
 						</div>
