--- a/xmgracetipstricks.html
+++ b/xmgracetipstricks.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
+	<head>
 	<title>Xmgrace Tips and Tricks</title>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137823758-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+		gtag('config', 'UA-137823758-1');
+	</script>
+	</head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="./wcss.css">
 	<body>
