--- a/tutorial1MD.html
+++ b/tutorial1MD.html
@@ -274,7 +274,7 @@
 								write_restart restart.npt.equil
 							</div>
 							<p align="justify">The following figure show the evolution with time of both box volume and concentration during equilibration phase. The concentration reaches a value that is expected for liquid water (~ 55 mol/L). The figure is made using the open source code Xmgrace.</p>
-							<img src="./tuto1MD/results.npt.png" style="width:50%" alt="Picture">
+							<img src="./tuto1MD/snapshotVMD_npt.png" style="width:50%" alt="Picture">
 
 
 							<br><br>
