--- a/tutorial1MD.html
+++ b/tutorial1MD.html
@@ -313,7 +313,9 @@
 								read_restart restart.npt.equil <br>
 								reset_timestep	0
 							</div>
-							Then, we define new variables that will be usefull for the calculation of the viscosity. The method is inspired from <a href=https://lammps.sandia.gov/doc/Howto_viscosity.html">this page</a>.
+							<p align="justify">
+							Then, we define new variables that will be usefull for the calculation of the viscosity. The method is inspired from <a TARGET="_BLANK" href="https://lammps.sandia.gov/doc/Howto_viscosity.html">this page</a>.
+							</p>
 							<div class="ContainerCode">
 								variable Nevery equal 10 <br>
 								variable Nrepeat equal 100 <br>
